test/zinc_source/compile_errors/concurrency/03_select_send_non_channel.zn
// expected-error: 'value' is not a channel

fn main() {
    value = 1

    select {
        case value <- 2 {
            print("sent")
        }
    }
}
